--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -71,6 +71,10 @@
   must be limited to one paragraph.
 \end{abstract}
 
+\section{Neural Network Architecture}
+\subsection{Deep Fully Connected Neural Networks with Merge-and-Run Mappings}
+One of the neural network architecture we consider is the deep fully connected neural networks with merge-and-run mappings, this is actually a variation of the deep convolutional neural networks with merge-and-run mappings(DMRNets), which itself is a variation of the residual neural network (ResNet). A ResNet is a neural network which consists of deep layers and solve the vanishing gradient problem caused by increasing network depth, the way it solves the vanishing gradient problem is to use some shortcuts to skip layers and reuse reusing activations from a previous layer until the adjacent layer learns its weights[1]. DMRNets is based on the idea of ResNet by averaging the inputs of the residual branches (Merge), and add the average to the output of each residual branch as the input of the subsequent residual branch (Run)[2]. In the article, the authors used convolutional layers as the basic layers, in this project, we adopt and do some variations on this architecture by using the fully connected layers instead of convolutional layers as the basic layers to form the deep fully connected neural networks with merge-and-run mappings.
+
 \section{Submission of papers to NeurIPS 2020}
 
 NeurIPS requires electronic submissions.  The electronic submission site is
@@ -389,14 +393,10 @@ when listing the references.
 
 \small
 
-[1] Alexander, J.A.\ \& Mozer, M.C.\ (1995) Template-based algorithms for
-connectionist rule extraction. In G.\ Tesauro, D.S.\ Touretzky and T.K.\ Leen
-(eds.), {\it Advances in Neural Information Processing Systems 7},
-pp.\ 609--616. Cambridge, MA: MIT Press.
 
-[2] Bower, J.M.\ \& Beeman, D.\ (1995) {\it The Book of GENESIS: Exploring
-  Realistic Neural Models with the GEneral NEural SImulation System.}  New York:
-TELOS/Springer--Verlag.
+[1] Kaiming He, Xiangyu Zhang, Shaoqing Ren, Jian Sun. Deep Residual Learning for Image Recognition.
+
+[2] Liming Zhao, Mingjie Li, Depu Meng, Xi Li, Zhaoxiang Zhang. Deep Convolutional Neural Networks with Merge-and-Run Mappings. https://arxiv.org/abs/1611.07718.
 
 [3] Hasselmo, M.E., Schnell, E.\ \& Barkai, E.\ (1995) Dynamics of learning and
 recall at excitatory recurrent synapses and cholinergic modulation in rat
