update report and ppt
add experiments and graph and analysis

--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -129,8 +129,40 @@ biLSTM is a variant of LSTM, biLSTM train 2 instead of 1 LSTMs on 1 input sequen
 Small datasets MAP@10: 
 Whole datasets MAP@10: 
 
-\section{Experiments}
-\subsection{Comparison of Performance}
+\section{Experiments and Analysis}
+\subsection{Training}
+We wanted to use cloud platforms to train our model, but most of them needs payment, and we don't have the fund for that, Google Cloud Platform offers 1 month free trial, but to get the free trial we need to register with credit card, which unfortunately we don't possess, at the end of the day we need to train the model using our local machines. Limited by the performance of our local machines, we could only use a small subset of the datasets for training, in this case, we use the first 200 training shards (train0000.tfrecord~train0199.tfrecord) and the first 100 validation shards (validate0000.tfrecord~validate0099.tfrecord) as our training datasets. Figure 6 and 7 shows the graph of training curve of the LSTM and biLSTM models. As shown in the figures, both models converged at around $0.75$, with biLSTM having a slightly better performance.
+
+\begin{figure}
+  \centering
+  \fbox{\includegraphics[width=10cm, height=6cm]{lstm graph.png}}
+  \caption{LSTM training graph}
+\end{figure}
+
+\begin{figure}
+  \centering
+  \fbox{\includegraphics[width=10cm, height=6cm]{bilstm graph.png}}
+  \caption{biLSTM training graph}
+\end{figure}
+
+\subsection{Comparison and Analysis of Performance}
+\begin{table} [H]
+  \caption{Performance of different models}
+  \label{table 1}
+  \centering
+  \begin{tabular}{llll}
+    \toprule
+    Model     & 200 train MAP@10     & 100 validation MAP@10 & All datasets MAP@10 \\
+    \midrule 
+DMRNets & 0  & 0   &0  \\
+LSTM & 0  & 0 & 0.759     \\
+biLSTM     & 0 & 0 & 0.763      \\
+    \bottomrule
+  \end{tabular}
+\end{table}
+The performances of 3 models are listed in Table \ref{table 1}, as we could see, the MAP@10 for the first 200 training shards and 100 validation shards are always higher than the MAP@10 for the whole datasets, the reason is obvious as we use the first 200 training shards and 100 validation shards as training datasets which leads to possible overfitting. However, we consider that the LSTM and biLSTM's performance of around 0.75 to 0.76 for the whole datasets as satisfactory, since we only use an extremely small subset to train them. We hypothesize that if we use larger datasets for training, the model would lead to more satisfactory results, too bad that we don't have the computing power to prove this hypothesis.
+
+
 
 \section{Conclusion}
 Based on the experiments, we conclude that the xxx model has a superior performance over the other models we used.
