--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -106,10 +106,27 @@ Whole datasets MAP@10:
 
 \subsection{Long short-term memory (LSTM)}
 \subsubsection{Model Overview}
-LSTM is a type of recurrent neural network (RNN) architecture. A common LSTM unit is composed of a cell and 3 gates. The cell stores values over time intervals as cell states, and the 3 gates’ main job is to regulate the flow of information into and out of the cell. Specifically, forget gate decides which information to forget, input gate decides to update which value of cell states and update cell states, and at last, the output gate output filtered cell states. To put it in an abstract high-level view, what LSTM do is using past context as reference to predict the output, for more information please refer to the original article[3]. The model structure is shown in Figure 4.
- \begin{figure}
+Long short-term memory(LSTM) is a type of recurrent neural network (RNN) architecture,which is one of the most useful RNN. A common LSTM unit is composed of a cell and 3 gates. The cell stores values over time intervals as cell states, and the 3 gates’ main job is to regulate the flow of information into and out of the cell. Specifically, forget gate decides which information to forget, input gate decides to update which value of cell states and update cell states, and at last, the output gate output filtered cell states. To put it in an abstract high-level view, what LSTM do is using past context as reference to predict the output, for more information please refer to the original article[3]. The model structure is shown in Figure 4.
+
+Before LSTM, Let's talk about recurrent neural network(RNN) first. As brain can understand articles based on knowlege that people have learnt before,  some parameter in RNN can be derived from forward node. It is what tradition neural network can not do. While RNN will not keep what it learns from forward node for a long time, because every ceil of RNN will process both input and derived information in activation function. And LSTM solved this problem.
+\begin{figure}[H]
   \centering
-  \fbox{\includegraphics[width=16cm, height=20cm]{lstm.png}}
+  \fbox{\includegraphics[width=14cm, height=5cm]{RNN.png}}
+  \caption{Structure of RNN}
+\end{figure}
+Beside forward outputs, another data are derived from forward in long short-term memory network. The increasing data will only interact with few data that processed in ceil, which means it will keep the knowledge that it learned for a long time.
+
+Here are each step in the LSTM ceil:
+\begin{itemize}
+\item step1: $f_t = \sigma(W_f[h_{t-1}, x_t] + b_f)$
+\item step2: $i_t = \sigma(W_i[h_{t-1}, x_t] + b_i)$,  $\widetilde{C} = tanh(W_C[h_{t-1}, xt] + b_C)$
+\item step3: $o_t=\sigma(W_o[h_{t-1}, x_t] + b_o)$
+\item step4: $C_t = f_t*C_{t-1} + i_t*\widetilde{C}$
+\item step5: $h_t=o_t*tanh(C_t)$
+\end{itemize}
+\begin{figure}[h]
+  \centering
+  \fbox{\includegraphics[width=12cm, height=8cm]{lstm.png}}
   \caption{Structure of LSTM}
 \end{figure}
 
@@ -119,15 +136,16 @@ Whole datasets MAP@10:
 
 \subsection{Bidirectional Long short-term memory (biLSTM)}
 \subsubsection{Model Overview}
-biLSTM is a variant of LSTM, biLSTM train 2 instead of 1 LSTMs on 1 input sequence, the first on the input sequence, and the second on a reversed copy of the input sequence. In other words, it connects two hidden layers of opposite directions to the same output, this generally provide additional context to the network, thus results in better training results. for more information please refer to the original article[4]. The model structure is shown in Figure 5.
-\begin{figure}
+biLSTM is a variant of LSTM, biLSTM train 2 instead of 1 LSTMs on 1 input sequence, the first on the input sequence, and the second on a reversed copy of the input sequence. In other words, it connects two hidden layers of opposite directions to the same output, this generally provide additional context to the network, thus results in better training results. for more information please refer to the original article[4]. The model structure is shown in Figure 6.
+\begin{figure}[h]
   \centering
-  \fbox{\includegraphics[width=16cm, height=20cm]{biLSTM.png}}
+  \fbox{\includegraphics[width=16cm, height=7cm]{biLSTM.png}}
   \caption{Structure of biLSTM}
 \end{figure}
 \subsubsection{Performance}
 Small datasets MAP@10: 
 Whole datasets MAP@10: 
+
 
 \section{Experiments and Analysis}
 \subsection{Training}
