--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -116,7 +116,7 @@ Long short-term memory(LSTM) is a type of recurrent neural network (RNN) archite
 A common LSTM unit is composed of a cell and 3 gates. The cell stores values over time intervals as cell states, and the 3 gates’ main job is to regulate the flow of information into and out of the cell. Specifically, forget gate decides which information to forget, input gate decides to update which value of cell states and update cell states, and at last, the output gate output filtered cell states. To put it in an abstract high-level view, what LSTM do is using past context as reference to predict the output, for more information please refer to the original article[3]. The model structure is shown in Figure 4.
 Beside forward outputs, another data are derived from forward nodes in LSTM network. The increasing data will only interact with a few data that processed in cell, which means it will keep the knowledge that it learned for a long time.
 
-Here are each step in the LSTM cell:
+Here are each step in the forget gate of LSTM cell:
 \begin{itemize}
 \item step1: $f_t = \sigma(W_f[h_{t-1}, x_t] + b_f)$
 \item step2: $i_t = \sigma(W_i[h_{t-1}, x_t] + b_i)$,  $\widetilde{C} = tanh(W_C[h_{t-1}, xt] + b_C)$
@@ -126,7 +126,7 @@ Here are each step in the LSTM cell:
 \end{itemize}
 \begin{figure}[h]
   \centering
-  \fbox{\includegraphics[width=12cm, height=8cm]{lstm.png}}
+  \fbox{\includegraphics[width=12cm, height=8cm]{lstm1.png}}
   \caption{Structure of LSTM}
 \end{figure}
 
@@ -141,6 +141,15 @@ biLSTM is a variant of LSTM, biLSTM train 2 instead of 1 LSTMs on 1 input sequen
   \centering
   \fbox{\includegraphics[width=16cm, height=7cm]{biLSTM.png}}
   \caption{Structure of biLSTM}
+\end{figure}
+
+In our project, we train two features in each biLSTM, then merge them together. Through full connection layer and leaky relu activation, the network will give final results. The model structure detail is in Figure (x).
+
+The model first extend mean\_RGB features to 1024. Processing the data by using batch normalization and reshape in order to run bidirectional LSTM. Then model use dropout to make some noise. The process of the other feature is as same as RGB feature. When two features have done biLSTM, model concatenate them and full connect them using leaky relu. 
+\begin{figure}[h]
+  \centering
+  \fbox{\includegraphics[width=10cm, height=14cm]{bilstm_structure.png}}
+  \caption{Model structure in our project}
 \end{figure}
 \subsubsection{Performance}
 Small datasets MAP@10: 
