fix model file typo

--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -183,7 +183,7 @@ Based on the experiments, we conclude that the biLSTM model has a superior perfo
 The corresponding files to each models in the submission folder are shown below:
 \begin{enumerate}
 \item LSTM model: LSTM\_model.py and LSTM\_train.py
-\item biLSTM model: biLSTM\_model.py, biLSTM\_train.py, and biLSTM\_test.py
+\item biLSTM model: biLSTM\_model.py, train.py, and test.py
 \end{enumerate}
 
 \section{Contributions}
