--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -96,10 +96,11 @@ In this project, we adopt and do some variations on the DMRNets(CNN) by using th
 
  \begin{figure} [H]
   \centering
-  \fbox{\includegraphics[width=16cm, height=15cm]{part of model structure(DMRNets).png}}
+  \fbox{\includegraphics[width=17cm, height=16cm]{part of model structure(DMRNets).png}}
   \caption{Part of the structure of DMRNets(FCN).}
 \end{figure}
 
+\newpage
 
 \subsection{Long short-term memory (LSTM)}
 \subsubsection{Model Overview}
@@ -132,7 +133,7 @@ Each step in the forget gate of a LSTM cell is shown below:
 biLSTM is a variant of LSTM, biLSTM train two instead of one LSTMs on one input sequence, the first on the input sequence, and the second on a reversed copy of the input sequence. In other words, it connects two hidden layers of opposite directions to the same output, this generally provide additional context to the network, thus results in better training results. The structure of biLSTM is shown in Figure 6, for more information please refer to the original article[4].
 \begin{figure}[h]
   \centering
-  \fbox{\includegraphics[width=16cm, height=7cm]{biLSTM.png}}
+  \fbox{\includegraphics[width=14cm, height=6cm]{biLSTM.png}}
   \caption{Structure of biLSTM}
 \end{figure}
 
@@ -186,6 +187,8 @@ The corresponding files to each models in the submission folder are shown below:
 \item biLSTM model: biLSTM\_model.py, train.py, and test.py
 \end{enumerate}
 
+\newpage
+
 \section{Contributions}
 \begin{itemize}
 \item KAR CHUN TEONG: 
@@ -198,6 +201,7 @@ The corresponding files to each models in the submission folder are shown below:
 \begin{itemize}
 \item Analysis and implementation of LSTM and biLSTM model
 \item Training and testing of LSTM and biLSTM model
+\item Contribution of PPT and report about LSTM and biLSTM model
 \end{itemize}
 \item EDUARDO WANG ZHENG
 \begin{itemize}
